css styling, landing and comparison

--- a/app/templates/comparison/count.html
+++ b/app/templates/comparison/count.html
@@ -1,4 +1,4 @@
-<div style="height:650px; position:relative;">
+<div class="compareContainer count">
 
 <!--
 		<div class="span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05"></div>
@@ -8,9 +8,9 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 -->
-		<p class="franklinMedIt lime comparisonExpText"> <%= comparison.get("title") %></p>
+		<p class="franklinMedCompIt lime comparisonExpText"> <%= comparison.get("title") %></p>
 		<hr class="bgLime" style="height:3px"/>
-		<p class="franklinMed lime comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
+		<p class="franklinBook lime comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
 
 		<% 	var val0 = comparison.get("wc")[0]; 
 				var val1 = comparison.get("wc")[1]; 
