--- a/app/templates/comparison/list.html
+++ b/app/templates/comparison/list.html
@@ -1,9 +1,9 @@
-<div style="position:relative; height:1600px;">
+<div class="compareContainer list">
 
 		
-	<p class="franklinDemiIt lime comparisonExpText"> <%= comparison.get("title") %> </p>
+	<p class="franklinMedCompIt lime comparisonExpText"> <%= comparison.get("title") %> </p>
 	<hr class="bgLime" style="height:3px"/>
-	<p class="franklinMed lime comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
+	<p class="franklinBook lime comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
 		
 	<!-- Obama top 20 -->					
 	<div class="push-0" style="position:absolute;">
