--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,6 +4,8 @@
 /*@import "print.css";*/
 @import "all.css";
 
+@import "compare2.css";
+
 
 /* Add Stylus stylesheets here, alll files ending in .styl will be compiled!
  * For example: @import "main.styl";
