--- a/app/templates/comparison/emotion.html
+++ b/app/templates/comparison/emotion.html
@@ -1,4 +1,4 @@
-<div style="height:700px; position:relative;">
+<div class="compareContainer emotion">
 
 <!--
 		<div class="span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05"></div>
@@ -8,9 +8,9 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 -->
-		<p class="franklinMedIt fgBlue comparisonExpText"> <%= comparison.get("title") %></p>
+		<p class="franklinMedCompIt fgBlue comparisonExpText"> <%= comparison.get("title") %></p>
 		<hr class="bgBlue" style="height:3px"/>
-		<p class="franklinMed fgBlue comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
+		<p class="franklinBook fgBlue comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
 
 		<% 	var val0 = comparison.get("traits")[0].vals[0]; 
 				var val1 = comparison.get("traits")[0].vals[1]; 
