--- a/app/templates/comparison/spectrum.html
+++ b/app/templates/comparison/spectrum.html
@@ -8,7 +8,7 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 -->
-		<p class="franklinMedIt purple spectrumTitle"> <%= comparison.get("title") %></p>
+		<p class="franklinMedCompIt purple spectrumTitle"> <%= comparison.get("title") %></p>
 		<!-- <hr class="bgPurple" style="height:3px"/> -->
 		<div class = "span-3" style="height:450px; position:relative; border-right-style:dotted;"></div>
 
@@ -87,7 +87,7 @@
 			
 		<% }); %>
 		<div style="height:450px; position:relative;"> </div>
-		<p class="franklinMedIt redOrange spectrumTitle"><%= comparison.get("subtitle") %></p>
+		<p class="franklinMedCompIt redOrange spectrumTitle"><%= comparison.get("subtitle") %></p>
 
 </div>
 
