--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,11 +1,20 @@
 <div id="landingWrapper" class="container">
 	<span id="landingBigWords">government</br>education</br>opposition</br>election</span>
-	<span id="landingTitle" class="franklinDemiCompIt push-0">ReConstitution2012</span>
-	<span id="landingObama" class="franklinDemiComp gray60">OBAMA</span>
-	<span id="landingVersus" class="franklinDemiComp gray60">VS</span>
-	<span id="landingRomney" class="franklinDemiComp gray60">ROMNEY</span>
+<a> <img src="images/ReconLogo.png" class="push-0" style="position:absolute; top:48px;"/></a>
+	<!--<span id="landingTitle" class="franklinDemiCompIt push-0">ReConstitution2012</span> -->
+
+<div class="landingWhiteRule0 gray80"></div> 
+<div class="landingWhiteRule1 gray80"></div> 
+<div class="landingWhiteRule2 gray80"></div> 
+<div class="landingWhiteRule3 gray80"></div> 
+
+
+	<span id="landingObama" class="franklinExDemiComp gray60">OBAMA</span>
+	<span id="landingVersus" class="franklinExDemiComp gray60">VS</span>
+	<span id="landingRomney" class="franklinExDemiComp gray60">ROMNEY</span>
 	<span id="landingSubTitle" class="franklinDemiCompIt gray160">A LIVE DECONSTRUCTION OF THE US PRESIDENTIAL DEBATES</span>
-	<div id="landingSubTitleDiv"></div>
+	<div id="landingSubTitleDiv"></div> 
+
 	<div id="landingButtonBox" class="push-4">
 		<% for (var i=0; i<3; i++){ %>
 			<div id="landingButton<%= i %>" class="landingButtonHolder">
@@ -17,12 +26,22 @@
 			 	<hr class="landingRule gray60"></hr> 
 			 <% } %>
 		<% } %>
+		
+
+		<div id="LandingMakingof">
+		<span class="LandingMakingof metaBoldIt gray60 span-2">{ Go Behind the Scenes }</span>
+				<span class="LandingMakingofSubTitle metaBold gray60 span-2">Read about the making of the project</span>
+			</div>
+
+		
 	</div>
+	
+	
 	<div id="landingCreditsBox">
-		<span class="landingCredits push-0 white franklinBook">Partners</span>
+		<span class="landingCredits push-0 white franklinLight">Partners</span>
 		<a href="http://www.sosolimited.com" target="blank"> <img src="images/landingSosoLogo.png" class="push-0" style="position:absolute; top:48px;"/></a>
 		<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingCreatorsLogo.png" class="push-1" style="position:absolute; top:48px;"/></a>
-		<span class="landingCredits push-3 white franklinBook">In collaboration with</span>
+		<span class="landingCredits push-3 white franklinLight">In collaboration with</span>
 		<span class="landingCredits push-3 white franklinMed" style="top:36px;">Bocoup</br>Tim Branyen</span>
 		<span class="landingCredits push-4 white franklinMed" style="top:36px;">James Pennebaker, UT Austin</br>Cindy Chung, UT Austin</span>
 	</div>
