landing page styling

--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -38,9 +38,9 @@
 	
 	
 	<div id="landingCreditsBox">
-		<span class="landingCredits push-0 white franklinLight">Partners</span>
-		<a href="http://www.sosolimited.com" target="blank"> <img src="images/landingSosoLogo.png" class="push-0" style="position:absolute; top:48px;"/></a>
-		<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingCreatorsLogo.png" class="push-1" style="position:absolute; top:48px;"/></a>
+		<!--<span class="landingCredits push-0 white franklinLight">Partners</span>-->
+		<a href="http://www.sosolimited.com" target="blank"> <img src="images/landingSosoLogo.png" class="push-0" style="position:absolute; top:20px;"/></a>
+		<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingCreatorsLogo2.png" class="push-1" style="position:absolute; top:20px;"/></a>
 		<span class="landingCredits push-3 white franklinLight">In collaboration with</span>
 		<span class="landingCredits push-3 white franklinMed" style="top:36px;">Bocoup</br>Tim Branyen</span>
 		<span class="landingCredits push-4 white franklinMed" style="top:36px;">James Pennebaker, UT Austin</br>Cindy Chung, UT Austin</span>
