added clickthrus for opening and closing comparisons, and fixed some scroll issues

--- a/app/templates/overlays/quotes.html
+++ b/app/templates/overlays/quotes.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="franklinHeavy quoteLeftQuote" style="left: -200px; top: <%= posY %>px">&ldquo;</div>
-  <div class="metaBold quotePhrase" style="left: <%= speaker == 'obama' ? '-1000px' : '2048px' %>; top: <%= posY %>px"><%= phrase %></div>
-  <div class="franklinHeavy quoteRightQuote" style="left: 2048px; top: <%= posY %>px">&rdquo;</div>
+  <div class="franklinHeavy quoteLeftQuote quotesClick" style="left: -200px; top: <%= posY %>px">&ldquo;</div>
+  <div class="metaBold quotePhrase quotesClick" style="left: <%= speaker == 'obama' ? '-1000px' : '2048px' %>; top: <%= posY %>px"><%= phrase %></div>
+  <div class="franklinHeavy quoteRightQuote quotesClick" style="left: 2048px; top: <%= posY %>px">&rdquo;</div>
 </div> 
