--- a/assets/css/compare2.css
+++ b/assets/css/compare2.css
@@ -7,11 +7,9 @@
 
 }
 
-
-
 .list {
 
-height:1600px;
+height:1200px;
 
 }
 
@@ -141,11 +139,24 @@ height:1600px;
 }
 
 .spectrumTitle {
+
 	position:relative;
 	font-size: 128px;
 	margin: 0px -160px 0px 160px;
 	padding: 0px 0px 0px 0px;
 	line-height:128px;
+
+}
+
+.spectrumGradientPurpleRed {
+
+	background: #652d6a; /* Old browsers */
+	background: -moz-linear-gradient(top, #652d6a 0%, #ff4237 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#652d6a), color-stop(100%,#ff4237)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #652d6a 0%,#ff4237 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #652d6a 0%,#ff4237 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #652d6a 0%,#ff4237 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #652d6a 0%,#ff4237 100%); /* W3C */
 
 }
 
