--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,7 +4,7 @@
 /*@import "print.css";*/
 @import "all.css";
 
-@import "compare2.css";
+@import "compare.css";
 
 
 /* Add Stylus stylesheets here, alll files ending in .styl will be compiled!
