--- a/app/templates/comparison/count.html
+++ b/app/templates/comparison/count.html
@@ -8,9 +8,9 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 -->
-		<p class="franklinMedCompIt lime comparisonExpText"> <%= comparison.get("title") %></p>
-		<hr class="bgLime" style="height:3px"/>
-		<p class="franklinBook lime comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
+		<p class="franklinMedCompIt comparisonTitle <%=comparison.get("color1").toLowerCase()%>  "> <%= comparison.get("title") %></p>
+		<hr class="bg<%=comparison.get("color1")%>" style="height:3px"/>
+		<p class="franklinBook <%=comparison.get("color1").toLowerCase()%> comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
 
 		<% 	var val0 = comparison.get("wc")[0]; 
 				var val1 = comparison.get("wc")[1]; 
@@ -28,9 +28,9 @@
 		<p class="franklinDemiComp push-0 countBigNumber grayBlue" style="top: <%= mapVal(val0)[1]/2.0%>px;" > <%=  val0 %> </p>
 		<p class="franklinDemiComp push-4 countBigNumber grayBlue" style="top: <%= mapVal(val1)[1]/2.0%>px;"> <%=  val1 %>  </p>
 
-		<div class="comparisonBarGraph bgLime push-1 span-2" style="height:<%= mapVal(val0)[0] %>px; top:<%= mapVal(val0)[1] %>px;" >
+		<div class="comparisonBarGraph bg<%=comparison.get("color1")%> push-1 span-2" style="height:<%= mapVal(val0)[0] %>px; top:<%= mapVal(val0)[1] %>px;" >
 			<p class="franklinDemiCompIt barGraphText grayBlue" > Obama </p>   </div>
-		<div class="comparisonBarGraph bgLime push-3 span-2" style="height:<%= mapVal(val1)[0] %>px; top:<%= mapVal(val1)[1] %>px;" >
+		<div class="comparisonBarGraph bg<%=comparison.get("color1")%> push-3 span-2" style="height:<%= mapVal(val1)[0] %>px; top:<%= mapVal(val1)[1] %>px;" >
 			<p class="franklinDemiCompIt barGraphText grayBlue" > Romney </p>   </div>
 			
 		<!--
