--- a/app/templates/comparison/spectrum.html
+++ b/app/templates/comparison/spectrum.html
@@ -8,7 +8,7 @@
 		<div class="push-4 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 		<div class="push-5 span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05;"></div>
 -->
-		<p class="franklinMedCompIt purple spectrumTitle"> <%= comparison.get("title") %></p>
+		<p class="franklinMedCompIt spectrumTitle <%=comparison.get("color1").toLowerCase()%>"> <%= comparison.get("title") %></p>
 		<!-- <hr class="bgPurple" style="height:3px"/> -->
 		<div class = "spectrumPush-3 spectrumGradientPurpleRed" style="height:450px; width:3px; position:relative; "></div>
 
@@ -85,7 +85,7 @@
 				<% } %>
 			
 		<% }); %>
-		<p class="franklinMedCompIt redOrange spectrumTitle" style="top:-20px"><%= comparison.get("subtitle") %></p>
+		<p class="franklinMedCompIt spectrumTitle <%=comparison.get("color2").toLowerCase()%>" style="top:-20px"><%= comparison.get("subtitle") %></p>
 
 </div>
 
