--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -314,17 +314,19 @@ hr {
 .grayBlue{ color:rgb(67,67,75); }
 .bgGrayBlue{ background-color:rgb(77,77,85); }
 .pink{ color:rgb(231,0,149); }
-.fgBlue{ color:rgb(64,180,229); }
-.bgBlue{ background-color:rgb(64,180,229); }
+.bgPink{ background-color:rgb(231,0,149); }
+.sky{ color:rgb(64,180,229); }
+.bgSky{ background-color:rgb(64,180,229); }
 .lime{ color:rgb(207,255,36); }
 .bgLime{ background-color:rgb(207,255,36); }
-.fgMagenta{ color:rgb(227, 31, 130); } 
+.magenta{ color:rgb(227, 31, 130); } 
 .bgMagenta{ background-color:rgb(227, 31, 130); } 
-.redOrange{ color:rgb(255, 66, 55); } 
-.bgRedOrange{ background-color:rgb(255, 66, 55); } 
+.cherry{ color:rgb(255, 66, 55); } 
+.bgCherry{ background-color:rgb(255, 66, 55); } 
 .purple{ color:rgb(101, 45, 106); } 
 .bgPurple{ background-color:rgb(101, 45, 106); } 
 .salmon{ color:rgb(255,157,108); }
+.bgSalmon{ background-color:rgb(255,157,108); }
 .seaGreen{ color:rgb(124,240,179); }
 
 /* Overlays */
