--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -28,9 +28,9 @@
 		<% } %>
 		
 
-		<div id="LandingMakingof">
-		<span class="LandingMakingof metaBoldIt gray60 span-2">{ Go Behind the Scenes }</span>
-				<span class="LandingMakingofSubTitle metaBold gray60 span-2">Read about the making of the project</span>
+		<div>
+		<span class="landingMakingof franklinMedComp gray60 span-2">>> Go Behind the Scenes</span>
+				<span class="landingMakingofSubTitle franklinBookComp gray60 span-2">Read about the making of the project</span>
 			</div>
 
 		
@@ -39,10 +39,23 @@
 	
 	<div id="landingCreditsBox">
 		<!--<span class="landingCredits push-0 white franklinLight">Partners</span>-->
-		<a href="http://www.sosolimited.com" target="blank"> <img src="images/landingSosoLogo.png" class="push-0" style="position:absolute; top:20px;"/></a>
+		<a href="http://www.sosolimited.com" target="blank"> <img src="images/landingSosoLogo.png" class="push-0" style="position:absolute; top:35px;"/></a>
 		<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingCreatorsLogo2.png" class="push-1" style="position:absolute; top:20px;"/></a>
-		<span class="landingCredits push-3 white franklinLight">In collaboration with</span>
-		<span class="landingCredits push-3 white franklinMed" style="top:36px;">Bocoup</br>Tim Branyen</span>
-		<span class="landingCredits push-4 white franklinMed" style="top:36px;">James Pennebaker, UT Austin</br>Cindy Chung, UT Austin</span>
+		<span class="landingCredits push-3 white franklinLight" style="top:26px;">In collaboration with</span>
+		<span class="landingCredits push-3 white franklinMed" style="top:50px;">Bocoup</br>Tim Branyen</span>
+		<span class="landingCredits push-4 white franklinMed" style="top:50px;">James Pennebaker, UT Austin</br>Cindy Chung, UT Austin</span>
+	
+	
+	<div id="SocialMediaLinks">
+	
+		<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingTwitterLogo.png" class="push-1" style="position:absolute; top:26px;"/></a>
+		
+		<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingFBLogo.png" class="push-1" style="position:absolute; top:26px; left:40px"/></a>
+	
 	</div>
+	
+	
+	</div>
+	
+	
 </div>
