--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -47,9 +47,20 @@
 	
 	<div id="SocialMediaLinks">
 	
-		<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingTwitterLogo.png" class="push-1" style="position:absolute; top:26px;"/></a>
+	
+<a href="https://twitter.com/share" data-url="http://Reconstitution2012.com" data-text="A Live Deconstruction of the US Presidential Debates" data-via="Sosolimited"><img src="images/landingTwitterLogo.png" class="push-1" style="position:absolute; top:26px;"/></a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+	
+	
+	
+		<a href="https://www.facebook.com/pages/Sosolimited/26159222134?ref=hl" target="blank"> <img src="images/landingFBLogo.png" class="push-1" style="position:absolute; top:26px; left:40px"/></a>
+	
+	
+	<!--	<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingTwitterLogo.png" class="push-1" style="position:absolute; top:26px;"/></a>
 		
 		<a href="http://thecreatorsproject.com" target="blank"> <img src="images/landingFBLogo.png" class="push-1" style="position:absolute; top:26px; left:40px"/></a>
+	-->
+	
 	
 	</div>
 	
