--- a/app/templates/overlays/category.html
+++ b/app/templates/overlays/category.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <div class="metaBold quotePhrase quotesClick" ><%= category %></div>
-  <div class="metaBold quotePhrase quotesClick" >word category!</div>
+  <div class="franklinDemiCompIt certain categoryOverlay" ><%= title %></div>
+  <div class="franklinDemiCompIt certain categoryOverlay overlay-bottom" >Words</div>
 </div> 
