--- a/app/templates/comparison/count.html
+++ b/app/templates/comparison/count.html
@@ -10,7 +10,7 @@
 -->
 		<p class="franklinMedCompIt comparisonTitle <%=comparison.get("color1").toLowerCase()%>  "> <%= comparison.get("title") %></p>
 		<hr class="bg<%=comparison.get("color1")%>" style="height:3px"/>
-		<p class="franklinBook <%=comparison.get("color1").toLowerCase()%> comparisonExpSubtitle"><%= comparison.get("subtitle") %></p>
+		<p class="franklinBook <%=comparison.get("color1").toLowerCase()%> comparisonSubtitle"><%= comparison.get("subtitle") %></p>
 
 		<% 	var val0 = comparison.get("wc")[0]; 
 				var val1 = comparison.get("wc")[1]; 
@@ -23,15 +23,32 @@
 					var t = totalH-h;
 					return [h,t];
 				}
+								
+				function addCommas(nStr)
+				{
+					nStr += '';
+					x = nStr.split('.');
+					x1 = x[0];
+					x2 = x.length > 1 ? '.' + x[1] : '';
+					var rgx = /(\d+)(\d{3})/;
+					while (rgx.test(x1)) {
+						x1 = x1.replace(rgx, '$1' + ',' + '$2');
+					}
+					return x1 + x2;
+				}		
+						
 		%>
+		
+		<div class = "push-0" style="top: <%= mapVal(val0)[1]/2.0%>px; position:absolute;" >
+		<p class="franklinDemiCompIt countCandidate grayBlue" > Obama </p>
+		<p class="franklinDemiComp countBigNumber " > <%=  addCommas(val0) %> </p> </div>
+		
+		<div class = "push-4" style="top: <%= mapVal(val1)[1]/2.0%>px; position:absolute;">
+		<p class="franklinDemiCompIt countCandidate grayBlue" > Romney </p> 
+		<p class="franklinDemiComp countBigNumber" > <%=  addCommas(val1) %>  </p> </div>
 
-		<p class="franklinDemiComp push-0 countBigNumber grayBlue" style="top: <%= mapVal(val0)[1]/2.0%>px;" > <%=  val0 %> </p>
-		<p class="franklinDemiComp push-4 countBigNumber grayBlue" style="top: <%= mapVal(val1)[1]/2.0%>px;"> <%=  val1 %>  </p>
-
-		<div class="comparisonBarGraph bg<%=comparison.get("color1")%> push-1 span-2" style="height:<%= mapVal(val0)[0] %>px; top:<%= mapVal(val0)[1] %>px;" >
-			<p class="franklinDemiCompIt barGraphText grayBlue" > Obama </p>   </div>
-		<div class="comparisonBarGraph bg<%=comparison.get("color1")%> push-3 span-2" style="height:<%= mapVal(val1)[0] %>px; top:<%= mapVal(val1)[1] %>px;" >
-			<p class="franklinDemiCompIt barGraphText grayBlue" > Romney </p>   </div>
+		<div class="comparisonBarGraph bg<%=comparison.get("color1")%> push-1 span-2" style="height:<%= mapVal(val0)[0] %>px; top:<%= mapVal(val0)[1] %>px;" >	</div>
+		<div class="comparisonBarGraph bg<%=comparison.get("color1")%> push-3 span-2" style="height:<%= mapVal(val1)[0] %>px; top:<%= mapVal(val1)[1] %>px;" >  </div>
 			
 		<!--
 		<% comparison.get("traits").forEach(function(trait){ %>
