--- a/app/templates/comparison/emotion.html
+++ b/app/templates/comparison/emotion.html
@@ -11,7 +11,7 @@
 		<p class="franklinMedCompIt comparisonTitle <%=comparison.get("color1").toLowerCase()%>"> <%= comparison.get("title") %></p>
 		<hr class="bg<%=comparison.get("color1")%>" style="height:3px"/>
 		<p class="franklinBook <%=comparison.get("color1").toLowerCase()%> comparisonSubtitle"><%= comparison.get("subtitle") %></p>
-		<div style="height:444px; position:relative; background-color:rgb(255,255,255); background-repeat:no-repeat; opacity:0.2; z-index:-2;"></div>
+		<div class="backgroundGradient"></div>
 		
 		<% 	var val0 = comparison.get("traits")[0].vals[0]; 
 				var val1 = comparison.get("traits")[0].vals[1]; 
