--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -461,6 +461,7 @@ landingTitleImage {
 
 .landingButtonHolder {
 	position: relative;	
+  cursor: pointer;
 }
 
 .landingButton {
@@ -843,6 +844,10 @@ landingTitleImage {
   position: relative;
   top: 1em;
   color: rgb(207,255,36);
+}
+
+.tapable {
+  cursor: pointer;
 }
 
 /*
