--- a/app/templates/overlays/category.html
+++ b/app/templates/overlays/category.html
@@ -1,4 +1,6 @@
 <div class="container">
-  <div class="franklinDemiCompIt certain categoryOverlay" ><%= title %></div>
-  <div class="franklinDemiCompIt certain categoryOverlay overlay-bottom" >Words</div>
+	<div class="catWrapper">
+  	<div class="franklinDemiCompIt <%= category %>Markup reverse categoryOverlay" ><%= title %></div>
+  	<div class="franklinDemiCompIt <%= category %>Markup reverse categoryOverlay overlay-bottom" >Words</div>
+  <div class="catWrapper">
 </div> 
