--- a/app/templates/comparison/list.html
+++ b/app/templates/comparison/list.html
@@ -3,7 +3,7 @@
 		
 	<p class="franklinMedCompIt comparisonTitle <%=comparison.get("color1").toLowerCase()%> " comparisonExpText"> <%= comparison.get("title") %> </p>
 	<hr class="bg<%=comparison.get("color1")%>"" style="height:3px"/>
-	<p class="franklinBook <%=comparison.get("color1").toLowerCase()%> comparisonSubtitle"><%= comparison.get("subtitle") %></p>
+	<p class="franklinBookComp <%=comparison.get("color1").toLowerCase()%> comparisonSubtitle"><%= comparison.get("subtitle") %></p>
 		
 	<!-- Obama top 20 -->					
 	<div class="push-0" style="position:absolute;">
