--- a/app/templates/comparison/count.html
+++ b/app/templates/comparison/count.html
@@ -10,7 +10,7 @@
 -->
 		<p class="franklinMedCompIt comparisonTitle <%=comparison.get("color1").toLowerCase()%>  "> <%= comparison.get("title") %></p>
 		<hr class="bg<%=comparison.get("color1")%>" style="height:3px"/>
-		<p class="franklinBook <%=comparison.get("color1").toLowerCase()%> comparisonSubtitle"><%= comparison.get("subtitle") %></p>
+		<p class="franklinBookComp <%=comparison.get("color1").toLowerCase()%> comparisonSubtitle"><%= comparison.get("subtitle") %></p>
 
 		<% 	var val0 = comparison.get("wc")[0]; 
 				var val1 = comparison.get("wc")[1]; 
@@ -40,11 +40,11 @@
 		%>
 		
 		<div class = "push-0" style="top: <%= mapVal(val0)[1]/2.0%>px; position:absolute;" >
-		<p class="franklinDemiCompIt countCandidate grayBlue" > Obama </p>
+		<p class="franklinDemiCompIt countCandidate white" > Obama </p>
 		<p class="franklinDemiComp countBigNumber " > <%=  addCommas(val0) %> </p> </div>
 		
 		<div class = "push-4" style="top: <%= mapVal(val1)[1]/2.0%>px; position:absolute;">
-		<p class="franklinDemiCompIt countCandidate grayBlue" > Romney </p> 
+		<p class="franklinDemiCompIt countCandidate white" > Romney </p> 
 		<p class="franklinDemiComp countBigNumber" > <%=  addCommas(val1) %>  </p> </div>
 
 		<div class="comparisonBarGraph bg<%=comparison.get("color1")%> push-1 span-2" style="height:<%= mapVal(val0)[0] %>px; top:<%= mapVal(val0)[1] %>px;" >	</div>
