--- a/app/templates/comparison/emotion.html
+++ b/app/templates/comparison/emotion.html
@@ -1,4 +1,4 @@
-<div class="compareContainer emotion">
+<div class="compareContainer emotion <%= comparison.get("title") %>">
 
 <!--
 		<div class="span-1" style="position:absolute; height:100%; background-color:white; opacity:0.05"></div>
