--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -863,7 +863,12 @@ landingTitleImage {
   top: 1em;
   color: rgb(207,255,36);
 }
-
+#transcript .freqWordUnderline {
+  position: absolute;
+  height: 1px;
+  background-color: white;
+  z-index: -1;
+}
 .tapable {
   cursor: pointer;
 }
