--- a/app/templates/overlays/numbers.html
+++ b/app/templates/overlays/numbers.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<% if(speaker==1) { // Obama %>
-    <div class="franklinMedIt numberPhrase numbersClick" style="left: -1024px; top:<%= posY %>px;"><%= phrase.toUpperCase() %></div>
+    <div class="metaBook numberPhrase numbersClick" style="left: -1024px; top:<%= posY %>px;">+<%=$.trim(phrase)%></div>
 	<% }else{ %>
-    <div class="franklinMedIt numberPhrase numbersClick" style="left: 2048px; text-align: left; top:<%= posY %>px;"><%= phrase.toUpperCase() %></div> 
+    <div class="metaBook numberPhrase numbersClick" style="left: 2048px; text-align: left; top:<%= posY %>px;">+<%=$.trim(phrase)%></div> 
 	<% } %>
 </div>
