--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -125,6 +125,25 @@ h1 { /* Speaker names */
   cursor: pointer;
 }
 
+h1:hover { /* Speaker names */
+  line-height: 0px;
+  font-size: 36px;
+  background-color: rgb(20,20,20);
+  cursor: pointer;
+}
+
+.transcriptSpeaker {
+	text-decoration: none;	
+  line-height: 24px;
+  font-size: 48px;
+  cursor: pointer;
+}
+
+.transcriptSpeaker:hover {
+	color:rgb(255, 66, 55);
+}
+
+
 
 p { /* Transcript text */
   line-height: 24px;
@@ -191,7 +210,7 @@ hr {
 #navigation {
 	position: fixed;
 	width: 530px;
-	height: 40px;	
+	height: 48px;
 	z-index: 10;
 
 	transform:rotate(90deg);
@@ -210,24 +229,24 @@ hr {
 /* White box inside #navigation div */
 #navTimeline {
   width: 530px;
-  height: 8px;
+  height: 16px;
 }
 #navProgressBar {
-  height: 8px;
+  height: 16px;
   background-color: rgb(64, 180, 230);	
   width: 0px;
   z-index: 0;
 }
 #navProgressMarker {
-  height: 8px;
-  width:2px;
+  height: 16px;
+  width:4px;
   background-color: black;
   z-index: 2;
   position: absolute;
   top:0px;
 }
 .navChapterBar {
-  height: 8px;
+  height: 16px;
   z-index: 1;
   position: absolute;
   top: 0px;
@@ -663,8 +682,18 @@ landingTitleImage {
   text-transform: uppercase;
 }
 
+.certainMarkup:hover{
+	background-color: rgb(255,175,108) !important;
+	color: rgb(255, 255, 255) !important;
+}
+
 .certainMarkup.reverse{
 	background-color: rgb(255,175,108) !important;
+	color: rgb(255, 255, 255) !important;
+}
+
+.tentatMarkup:hover{
+	background-color: rgb(193,186,134) !important;
 	color: rgb(255, 255, 255) !important;
 }
 
@@ -673,9 +702,18 @@ landingTitleImage {
 	color: rgb(255, 255, 255) !important;
 }
 
+.posemoMarkup:hover {
+	background-color: rgb(124,240,179) !important;
+	color: rgb(255, 255, 255) !important;
+}
 
 .posemoMarkup.reverse{
 	background-color: rgb(124,240,179) !important;
+	color: rgb(255, 255, 255) !important;
+}
+
+.negemoMarkup:hover{
+	background-color: rgb(122,52,183) !important;
 	color: rgb(255, 255, 255) !important;
 }
 
